<resources>
    <string name="app_name">Recapp</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="my_home">My home</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="my_account">My account</string>
    <string name="my_comments">My comments</string>
    <string name="my_appointments">My appointments</string>
    <string name="my_favorites">My favorites</string>
    <string name="my_images">My images</string>
    <string name="my_information">My information</string>
    <string name="places">Places</string>
    <string name="map">Map</string>
    <string name="events">Events</string>
    <string name="tutorial">Tutorial</string>
    <string name="category">Category</string>
    <string name="sub_category">Sub category</string>
    <string name="add">Add</string>
    <string name="addCategory">Add category</string>
    <string name="title_activity_detail">Detail</string>
    <string name="hello_world">Hello world!</string>
    <string name="comments">Comments</string>
    <string name="title_activity_user_detail">UserDetail</string>
    <string name="action_delete">Delete</string>
    <string name="the_way">Calculate the route</string>
    <string name="save">Save</string>
    <string name="newEvent">New event</string>
    <string name="eventName">Event name</string>
    <string name="to">To</string>
    <string name="notification">Notification</string>
    <string name="description">Description</string>
    <string name="place">Place</string>
    <string name="event">Event</string>
    <string name="search">Search</string>
    <string name="search_hint">Search...</string>
    <string name="filter">Filters</string>
    <string name="add_item_item">Add item to filter</string>
    <string name="batteries">Batteries</string>
    <string name="tires">Tires</string>
    <string name="devices">Devices</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="facebook_app_id">1674043846146726</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="going">Are you going to?</string>
    <string name="choose">Choose or take a picture</string>
    <string name="going_to">I am going to</string>
    <string name="my_events">My events</string>
    <string name="banner_ad_unit_id_navigation">ca-app-pub-7106306232801377/4724119447</string>
    <string name="banner_ad_unit_id_user_detail">ca-app-pub-7106306232801377/6061251846</string>
    <string name="banner_ad_unit_id_company">ca-app-pub-7106306232801377/7697495042</string>
    <string name="interstitial_ad_unit_id_gallery">ca-app-pub-7106306232801377/6200852645</string>
    <string name="interstitial_ad_unit_id_tutorial">ca-app-pub-7106306232801377/9154319048</string>
    <string name="interstitial_ad_unit_id_news">ca-app-pub-7106306232801377/9174228242</string>
    <string name="company_loging">Login for companies</string>
    <string name="login">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="company_name">Company name</string>
    <string name="company_description">Company description</string>
    <string name="company_address">Company address</string>
    <string name="company_position">Company position</string>
    <string name="company_web">Company web</string>
    <string name="company_image">Company favorite image</string>
    <string name="company_favorite">Please choose the image which you want to be the favorite</string>
    <string name="points">My points</string>
    <string name="company_points">Transfer points</string>
    <string name="company">Company</string>
    <string name="add_points">Add points</string>
    <string name="skip">Skip</string>
    <string name="news">News</string>
    <string name="first_general">Find the best recycle points and events</string>
    <string name="first_points">Find the recycle points close to you</string>
    <string name="first_events">Visit the most important recycle events</string>
    <string name="internet">Internet</string>
    <string name="need_internet">You need internet to do this action</string>
    <string name="wrong_email">The email is not valid</string>
    <string name="statistics_image">Image</string>
    <string name="statistics_name">Name</string>
    <string name="statistics_lastname">Last name</string>
    <string name="statistics_email">Email</string>
    <string name="statistics_points">Points</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="contest">Contest</string>
    <string name="description_help">Please let us know all inquiries that you have about our app or ideas to improve it, we will be ready to make them happen. Thanks to all to use and prefer our app and we know that we can make a big change in the way as people think and together take care of the environment.</string>
    <string name="email_help">Our email is: agutierrezt@unal.edu.co.\nPlease feel free to write us.</string>
    <string name="time_default_value">12</string>
    <string name="time_default_value_string">12 hours</string>
    <string name="music_key">music key</string>
    <string name="music_title">Do you want to listen to background music?</string>
    <string name="network_key">network key</string>
    <string name="network_title">Do you want to use mobile data?</string>
    <string name="network_summary_on">Wifi</string>
    <string name="network_summary_off">Mobile data</string>
    <string name="time_key">time key</string>
    <string name="time_title">How often do you want to upload and download new information?</string>
    <string name="time_dialog_time">Time</string>

</resources>
