<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:table="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/table_week"
                    android:layout_weight="1"
                    style="?android:attr/borderlessButtonStyle"
                    android:text="@string/week"
                    android:background="#ecbbed"
                    android:textColor="@android:color/white"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/table_month"
                    android:layout_weight="1"
                    style="?android:attr/borderlessButtonStyle"
                    android:text="@string/month"
                    android:background="#64010101"
                    android:textColor="@android:color/white"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/table_year"
                    android:layout_weight="1"
                    style="?android:attr/borderlessButtonStyle"
                    android:text="@string/year"
                    android:background="#64010101"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

            <com.unal.tuapp.recapp.table.StatisticsTable
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8"
                android:id="@+id/table"
                table:headerColor="@color/my_primary"
                table:columnCount="4"
                table:headerElevation="10"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>



</android.support.design.widget.CoordinatorLayout>
